app/assets/stylesheets/discussions/_index.scss
.disc-header {
  background-color: $ultra-light;
  // box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
  margin-bottom: 2rem;
  position: relative;
  border-bottom: 1px solid $super-light;
  .navbar-head {
    display: flex;
    justify-content: space-between;
  }

  .list-inline{
  padding: 0rem 1rem;
  display: flex;
  border-bottom: 1px solid $super-light;
  align-items: center;
  margin-bottom: 0px;
  li>a.nav-link.active {
  cursor: pointer;
  color: $primary-light
  }
  li>a.nav-link:not(.active) {
  opacity:.5;
  }
  }


}
.disc-list {
  list-style:none;
  padding:0;
}

#modification-disc, #global-disc, #info-disc {
  margin:24px;
}



.disc-nav {
  .nav-link {
    display:initial;
    padding:0;
  }
  .nav-item i {
    transition:.2s;
  }
  .nav-item:hover i {
    color:$primary;
    transition:.2s;
  }
}


.disc-index {
  border: 2px solid rgba(128, 128, 128, 0.322);
  border-radius: 1rem;
  padding: 1rem;
  margin-bottom: 2rem;

    .disc-card-link {
      text-decoration: none;
      color: black;
    }

  .disc-card {
    list-style: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem 1rem;
    background-color: $light-grey;
    border-radius: 0.5rem;
    margin-bottom: 0.2rem;

    .disc-card-info {
      flex-grow: 1;
    }

    p {
      margin-bottom: 0;
    }

    .disc-creator {
      padding-top: 0.5rem;
      text-align: center;
    }
  }
}

.text-link {
  position: fixed;
  right: 2rem;
  bottom: 3rem;
}

.project-info {
  border: 2px solid rgba(128, 128, 128, 0.322);
  border-radius: 1rem;
  padding: 1rem;
  margin-bottom: 2rem;
}

#add-global-disc-form {
  text-align: right;

  .form-group {
    text-align: left;
  }

  .add-global-disc-btn {
    padding: 0.4rem 1rem;
    font-size: 1rem;
  }
}
// .avatar-btn {
  //   position: absolute;
  //   right: 2rem;
  //   top: 1rem;

  //   .avatar {
  //   width: 4rem;
  //   height: 4rem;
  //   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
  //   }
  // }

  // .disc-project-title{
  //   padding: 2rem 0;

  //   p {
  //     color:grey;
  //   }
  // }

  // .disc-nav{
  //   a{
  //     color: black;
  //   }

  //   li{
  //     list-style: none;
  //     padding: 0.5rem;
  //     color: black;

  //     &:hover {
  //       cursor: pointer;
  //     }
  //   }

  //   .active {
  //     font-weight: bold;
  //     border-bottom: 1px solid $primary;
  //   }
  // }

  // #add-contributor {
  //   position: absolute;
  //   bottom: 0;
  //   right: 3rem;
  //   color:$primary;
  // }

